add filter by autosubmit version
